--- a/package.json
+++ b/package.json
@@ -1,11 +1,33 @@
 {
   "name": "code-list-creator-webapp",
   "version": "1.0.0",
-  "description": "",
+  "description": "A web application to support code list creation, validation, reproduction and reuse.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "brunch watch --server",
+    "build": "brunch build --production"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rw251/code-list-webapp.git"
   },
   "author": "Richard Williams <richard.williams2@manchester.ac.uk>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "event-stream": "^3.3.2",
+    "jquery": "^1.12.4",
+    "jsonfile": "^2.3.1",
+    "lunr": "^0.7.1",
+    "path": "^0.12.7",
+    "webworkify": "^1.2.1"
+  },
+  "devDependencies": {
+    "auto-reload-brunch": "^2.0.0",
+    "brunch": "^2.8.0",
+    "clean-css-brunch": "^2.0.0",
+    "css-brunch": "^2.0.0",
+    "javascript-brunch": "^2.0.0",
+    "sass-brunch": "^2.6.3",
+    "uglify-js-brunch": "^2.0.0"
+  }
 }
