--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "brunch watch --server",
     "build": "brunch build --production",
+    "predeploy": "npm run build",
     "deploy": "git subtree push --prefix public origin gh-pages"
   },
   "repository": {
