--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "brunch watch --server",
     "build": "brunch build --production",
     "predeploy": "npm run build",
-    "deploy": "git subtree push --prefix public origin gh-pages"
+    "deploy:gh": "git subtree push --prefix public origin gh-pages",
+    "deploy": "git add --all && git commit -m 'deploy' && git push origin master && git subtree push --prefix public origin gh-pages"
   },
   "repository": {
     "type": "git",
