--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "brunch watch --server",
     "build": "brunch build --production",
-    "predeploy": "npm run build",
-    "deploy": "git subtree push --prefix public origin gh-pages"
+    "predeploy": "npm run build && cd public",
+    "deploy": "git add -A && git commit -m \"Latest changes\" ",
+    "postdeploy": "git push origin gh-pages"
   },
   "repository": {
     "type": "git",
