--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "cytoscape": "^2.6.12",
     "cytoscape-dagre": "^1.3.0",
+    "cytoscape-panzoom": "^2.4.0",
     "cytoscape-qtip": "^2.4.0",
     "dagre": "^0.7.4",
     "event-stream": "^3.3.2",
@@ -29,7 +30,6 @@
     "jsonfile": "^2.3.1",
     "lunr": "^0.7.1",
     "path": "^0.12.7",
-    "qtip2": "^2.2.0",
     "sigma": "^1.1.0",
     "vivagraphjs": "^0.8.1",
     "webworkify": "^1.2.1"
